# Yututui

./: .gitattributes  .gitignore  20260629015852435.txt  Cargo.toml  LICENSE  MANUAL.ja.md  MANUAL.ko.md  MANUAL.md  README.ja.md  README.ko.md  README.md  SECURITY.md  build.rs  default_5270318083492673312_0_3266640.profraw  deny.toml  flake.nix  install.ps1  install.sh  ytm-tui-windows-x64.zip.sha256
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci-pr.yml  native-release-build.yml  platform-advisory.yml  release-preflight-1.6.32.yml  release-preflight-1.6.33.yml  release-preflight-1.6.34.yml  release-preflight-1.6.35.yml  release-preflight-1.6.36.yml
assets/icons/: ytm-tui.icns  yututui.icns
crates/crossterm/: .gitattributes  .gitignore  Cargo.toml  Cargo.toml.orig  PATCHES.md
crates/ratatui-image/: Cargo.toml  Cargo.toml.orig  PATCHES.md
crates/yututui-core/: Cargo.toml
crates/yututui-core/src/: lib.rs  playback.rs
docs/: index.html  invariant-ledger.md  remote-control-ipc-plan.md  terminal-compatibility.md  tui-music-service-hardening-followup-plan.md  update-notification-mpv-keymap-plan.md  windows-smtc-completion-plan.md  windows-smtc-qa-runbook.md
examples/: dump_search.rs  layout_dump.rs  smtc-probe.rs  tui_perf_conpty.rs  tui_perf_control.rs  tui_perf_sampler.rs  tui_render_perf.rs
gui/: .prettierrc  WIRING.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
gui/src/: App.svelte  app.css  main.ts
gui/tests/: accounts.test.ts  ai.test.ts  anim.test.ts  app.smoke.test.ts  chord.test.ts  client.test.ts  democore.test.ts  downloads.test.ts  eq.test.ts  i18n.test.ts  interpolate.test.ts  keymap.test.ts  library.test.ts  localtheme.test.ts  panel.behavior.test.ts  playlists.test.ts  radio.test.ts  reorder.test.ts  search.test.ts  seekbar.test.ts  settings.test.ts  text-edit.test.ts  theme.test.ts  transfer.test.ts  ui.test.ts  whygem.test.ts  wiring.test.ts
packaging/: README.md
packaging/aur/: PKGBUILD.tmpl
packaging/homebrew/: ytm-tui.rb.tmpl  yututui.rb.tmpl
packaging/linux/: ytm-tui.desktop  yututui.desktop
packaging/scoop/: ytm-tui.json.tmpl  yututui.json.tmpl
scripts/: app-fields.allow  build-mpv-032.ps1  build-mpv-032.sh  check-app-boundaries.sh  check-architecture.sh  check-crossterm-patch.sh  check-doc-honesty.sh  check-file-size.sh  check-gui-types.sh  check-invariant-ledger.sh  check-ratatui-image-patch.sh  check-recovery-state-budget.py  check-recovery-state-budget.sh  check-unsafe-inventory.sh  check-workspace-layout.sh  coverage-80.sh  coverage-core.sh  desktop-native-window-role-qa.md  gen-gui-types.sh  mpv-032-m-option-value-zero-init.patch  package-macos.sh  preview-panel.sh  probe-mpv-032.py  recovery-state-budget.tsv  release-cli-smoke.ps1  release-cli-smoke.sh  report-app-domain-access.sh  size-baseline.sh  size-baseline.tsv  tui-perf-scenarios.json  tui-perf.ps1  tui-perf.py  tui-perf.sh  unix-daemon-smoke.sh  verify-windows-tray-manual-qa.ps1  windows-daemon-smoke.ps1  windows-smtc-manual-qa.ps1  windows-tray-manual-qa.ps1  windows-tray-process-smoke.ps1
src/: app.rs  artwork.rs  auth_cli.rs  cli_capability.rs  config.rs  data_cli.rs  data_export.rs  data_import.rs  data_ownership.rs  deps.rs  doctor.rs  download.rs  downloads.rs  eq.rs  event.rs  i18n.rs  ids.rs  keymap.rs  lib.rs  library.rs  logging.rs  lyrics.rs  main.rs  mousemap.rs  notify.rs  owner_event_policy.rs  paths.rs  persist.rs  personal_state.rs  playback_policy.rs  playback_target.rs  playlists.rs  queue.rs  rating.rs  resolver.rs  romanize.rs  runtime.rs  search_source.rs  session.rs  settings.rs  (+12 more)
src/ai/: actor.rs  client.rs  context.rs  dto.rs  mod.rs  model.rs  model_control.rs  protocol.rs  structured.rs  tests.rs  tools.rs  usage.rs
src/api/: actor.rs  domain.rs  gui_search.rs  hardening_tests.rs  mod.rs  protocol.rs  tests.rs  url_guard.rs  ytmusic.rs
src/app/: ai_reducer.rs  artist.rs  artwork.rs  audio_output.rs  audio_output_picker.rs  bootstrap.rs  clipboard.rs  context_menu.rs  data_export.rs  download.rs  feedback.rs  hardening_tests.rs  helpers.rs  keys.rs  library.rs  library_reducer.rs  local.rs  local_find.rs  local_format.rs  local_import.rs  local_import_helpers.rs  local_import_search.rs  lyrics_control.rs  lyrics_mouse.rs  media_reducer.rs  mod.rs  mode_switch.rs  mode_transition.rs  mouse.rs  mouse_routing.rs  navigation.rs  now_playing.rs  now_playing_reducer.rs  onboarding.rs  personal_sync.rs  playback_error.rs  player.rs  player_intent.rs  player_recovery.rs  player_transport.rs  (+28 more)
src/cli_capability/: tests.rs
src/config/: animation.rs  audio.rs  cache_policy_tests.rs  hardening_tests.rs  recovery.rs  spotify.rs  storage.rs  tests.rs  visual.rs
src/daemon/: accounts_host.rs  ai_host.rs  capabilities.rs  cli.rs  downloads_host.rs  effects.rs  engine.rs  engine_session.rs  events.rs  gui_search_pending.rs  lyrics_host.rs  mod.rs  must_deliver.rs  observer_plan.rs  ownership.rs  parity_tests.rs  personal_export.rs  personal_sync.rs  serve_setup.rs  shutdown_drain.rs  tests.rs  transfer_host.rs
src/data_export/: import_v1.rs  live.rs  macos_private.rs  offline.rs  publish.rs  tests.rs  unix_private.rs  windows_private.rs
src/desktop/: app.rs  assets.rs  bridge.rs  clipboard.rs  control.rs  executor.rs  gateway.rs  gateway_frontend.rs  launch.rs  menu_model.rs  mod.rs  native_error.rs  panel.html  panel.rs  panel_payload.rs  panel_tests.rs  persistence.rs  single_instance.rs  startup.rs  status.rs  window_state.rs
src/doctor/: audio_report.rs  directory_probe.rs  long_form_seek.rs  terminal.rs
src/download/: album_art.rs  import_admission_tests.rs  import_inbox.rs  metadata.rs  ownership.rs  terminal_outbox.rs  tests.rs
src/keymap/: chord.rs  compat.rs  defaults.rs  display.rs  map.rs  metadata.rs  tests.rs  text_edit_tests.rs
src/local/: find.rs  index.rs  metadata.rs  mod.rs  model.rs  query.rs  scan.rs
src/media/: artwork.rs  delivery.rs  identity.rs  (+5 more)
tests/: cli_smoke.rs  desktop_cli_smoke.rs  public_api.rs  terminal_startup_signal.rs
(+620 files in other folders)
