[package]
name = "ytm-tui"
version = "1.5.7"
edition = "2024"
description = "A fast terminal UI for YouTube Music — search, radio, synced lyrics, album art, and downloads, driven by mpv and yt-dlp."
license = "MIT"
repository = "https://github.com/Ochichan/ytm-tui"
homepage = "https://github.com/Ochichan/ytm-tui"
authors = ["Ochichan <ohstar94@gmail.com>"]
keywords = ["youtube-music", "tui", "music", "mpv", "yt-dlp"]
categories = ["command-line-utilities", "multimedia::audio"]
readme = "README.md"

# The shipped command is `ytt` — short to type and what the README/installers expose.
# The crate keeps the longer `ytm-tui` name (and the config/data dir string stays
# "ytm-tui"), so this only renames the produced binary, nothing user-facing.
[[bin]]
name = "ytt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6.0.0"
# Tiny, dependency-free RNG for queue shuffling (no `rand` pull-in).
fastrand = "2"
futures = "0.3.32"
getrandom = "0.4"
# Decode album art / thumbnails ourselves (off the render thread) and hand a ready
# `DynamicImage` to ratatui-image. Default features are off so only the formats we
# actually fetch are compiled in — JPEG (i.ytimg thumbnails + yt-dlp embedded covers),
# PNG, and WebP (YouTube increasingly serves these). Keeps the binary lean (priority:
# small binary) and pulls no C decoders. `^0.25.6` matches ratatui-image's pin so the
# `image` copy is shared, not duplicated.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
interprocess = { version = "2.4.2", features = ["tokio"] }
# Read embedded cover art out of locally downloaded tracks (m4a/mp3/flac). Pure Rust —
# no C, so the macOS→Windows cross-build stays clean (same reason native-tls was chosen).
lofty = "0.24"
ratatui = "0.30.2"
# Album art in the player view. `default-features = false` drops `chafa-dyn` (its only C
# dependency — would break the clean Windows cross-compile) and `image-defaults` (we pull
# `image` directly with just the formats we need). The Kitty/Sixel/iTerm2/halfblocks
# protocol encoders are pure Rust and compiled unconditionally — no feature gates them —
# so `crossterm` alone is enough. Opt-in feature; nothing renders unless the user enables it.
# Patched to a local fork (see `[patch.crates-io]` below + `crates/ratatui-image`): (1) its Kitty
# renderer emits explicit per-cell coordinates so a popup drawn over the album art (the
# `eq:`/`radio:` dropdowns) can't blank the image to the right of it; (2) its Sixel + iTerm2
# renderers stamp a per-encode tag into the image's anchor cell so a rebuilt protocol
# (`App::refresh_art` on a popup toggle) re-transmits once and the art doesn't ghost on Windows
# Terminal — see `crate::protocol::next_redraw_tag`. Same 11.0.6 otherwise.
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "tokio"] }
# Synced-lyrics fetch (lrclib) + raw browse. `native-tls` uses the OS TLS stack —
# Security.framework on macOS, SChannel on Windows — so there's no bundled C crypto
# (no aws-lc-sys/NASM): smaller binary, and Windows builds need no extra toolchain.
# Neither target uses OpenSSL, so the plan's "no system OpenSSL" intent still holds.
# `json` decodes responses. Shares ytmapi-rs's TLS stack (one provider, not two).
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json", "stream"] }
# YouTube Music metadata client. Same native (system) TLS as above — dropping the
# `rustls` feature is what removes aws-lc-sys. `simplified-queries` gives ergonomic
# `search_songs`/`search_*` helpers.
ytmapi-rs = { version = "0.3.2", default-features = false, features = ["native-tls", "simplified-queries"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.39.5"
# Optional player eye-candy (the Animations settings tab). A ratatui-native spinner used
# for the "now playing" throbber; nothing renders unless the user enables it. Permissive
# (Zlib) and pinned to ratatui 0.30, so it shares our ratatui copy — no second tree.
throbber-widgets-tui = "0.11"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time", "signal"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# The transport strip lays out wide media glyphs (⏮ ⏯ ⏭) and registers click rects by
# hand, so it needs the same cell-width ratatui uses — `chars().count()` is wrong for
# those. Already in the tree via ratatui, so this pins no extra copy.
unicode-width = "0.2"

[build-dependencies]
embed-resource = "3.0.9"

# `kill_mpv_now` sends SIGKILL straight from the panic hook / signal handler; one
# async-signal-safe syscall, no allocation. Unix only — Windows uses the Job Object
# (M9) plus a sysinfo backstop instead.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# No-orphan on Windows: a Job Object with KILL_ON_JOB_CLOSE so the kernel terminates
# mpv when our process dies for ANY reason (close button, logoff, Task-Manager kill) —
# the hard kills signal handlers can't catch. Plus SetConsoleCtrlHandler for prompt
# teardown. Version 0.61 is already in the tree (via tokio/sysinfo), so no extra copy.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Console",
] }

# Local fork of ratatui-image 11.0.6 with the Kitty explicit-coordinate + Sixel/iTerm2 anchor
# redraw-tag patches (see the dep note above). A vendored path patch — not a git/crates.io fork —
# so the source travels with the repo and `cargo install --path .` / the CI build need nothing
# extra. Re-apply the patches on any bump (grep the fork for `ytm-tui patch`).
[patch.crates-io]
ratatui-image = { path = "crates/ratatui-image" }

[profile.release]
opt-level = "s"      # optimise for size; revisit "z"/3 after benchmarking
lto = "fat"          # cross-crate dead-code stripping
codegen-units = 1    # best inlining (required for fat LTO)
panic = "abort"      # drop unwinding tables (~100 KB); panic hook still restores TTY
strip = "symbols"    # strip debug symbols from the shipped binary
