[package]
name = "yututui"
version = "1.6.31"
edition = "2024"
description = "A fast terminal UI for YouTube Music — search, radio, synced lyrics, album art, and downloads, driven by mpv and yt-dlp."
license = "MIT"
repository = "https://github.com/Ochichan/Yututui"
homepage = "https://github.com/Ochichan/Yututui"
authors = ["Ochichan <ohstar94@gmail.com>"]
keywords = ["youtube-music", "tui", "music", "mpv", "yt-dlp"]
categories = ["command-line-utilities", "multimedia::audio"]
readme = "README.md"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
undocumented_unsafe_blocks = "deny"

# The shipped command is `ytt` — short to type and what the README/installers expose.
# The crate keeps the longer `yututui` name (and the config/data dir string stays
# "yututui"), so this only renames the produced binary, nothing user-facing.
[[bin]]
name = "ytt"
path = "src/main.rs"

[[bin]]
name = "ytt-dev"
path = "src/bin/ytt-dev.rs"

[[bin]]
name = "yututray"
path = "src/bin/yututray.rs"
required-features = ["desktop"]

[features]
default = []
# The desktop GUI shell: main window + tray + mini player, one process, socket-only to
# the core. `desktop-tray` stays as a one-release forwarding alias so existing
# `--features desktop-tray` invocations (CI, installers, muscle memory) keep working
# while docs and pipelines migrate to `--features desktop`.
desktop = ["dep:tao", "dep:tray-icon", "dep:wry"]
desktop-tray = ["desktop"]
# Build/test-time only: derive ts-rs bindings for the v8 protocol read models and export
# them to gui/src/generated/protocol/. Never enabled in a release binary — `desktop` does
# NOT pull it, so it has zero runtime/size impact on the shipped `ytt`/`yututray`.
ts-export = ["dep:ts-rs"]
# Build-only escape used by the controlled performance harness. It allows the candidate binary
# to trust the harness's authenticated loopback source-rate ceiling; ordinary/default builds
# compile that environment-variable path out and remain fail-closed.
perf-harness = []

[dependencies]
anyhow = "1.0.103"
# Spotify OAuth PKCE: base64url-encode the SHA-256 code challenge. Pure Rust, tiny.
base64 = "0.22"
crossterm = { version = "0.29", features = ["event-stream"] }
# Playlist file import/export (Exportify-compatible). Pure Rust; handles quoting/escaping
# correctly, which hand-rolled CSV never does.
csv = "1.3"
directories = "6.0.0"
# Tiny, dependency-free RNG for queue shuffling (no `rand` pull-in).
fastrand = "2"
futures = "0.3.32"
getrandom = "0.4"
# Decode album art / thumbnails ourselves (off the render thread) and hand a ready
# `DynamicImage` to ratatui-image. Default features are off so only the formats we
# actually fetch are compiled in — JPEG (i.ytimg thumbnails + yt-dlp embedded covers),
# PNG, and WebP (YouTube increasingly serves these). Keeps the binary lean (priority:
# small binary) and pulls no C decoders. `^0.25.6` matches ratatui-image's pin so the
# `image` copy is shared, not duplicated.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
interprocess = { version = "2.4.2", features = ["tokio"] }
# Read embedded cover art out of locally downloaded tracks (m4a/mp3/flac). Pure Rust —
# no C, so the macOS→Windows cross-build stays clean (same reason native-tls was chosen).
lofty = "0.24"
# Last.fm `api_sig` request signing (md5 per their auth spec — a format requirement,
# not a security choice). Pure Rust, tiny (RustCrypto).
md-5 = "0.10"
# Native desktop notifications (radio-recording saved) — the *fallback* tier used only when the
# terminal doesn't support OSC 9/777 escape-sequence notifications (see `crate::notify`). One
# crate, three backends: pure-Rust zbus/D-Bus on Linux, WinRT toast on Windows, NSUserNotification
# on macOS. Default features (no `preview-macos-un`, which can't post from an unbundled binary).
notify-rust = "4"
ratatui = "0.30.2"
# Album art in the player view. `default-features = false` drops `chafa-dyn` (its only C
# dependency — would break the clean Windows cross-compile) and `image-defaults` (we pull
# `image` directly with just the formats we need). The Kitty/Sixel/iTerm2/halfblocks
# protocol encoders are pure Rust and compiled unconditionally — no feature gates them —
# so `crossterm` alone is enough. Opt-in feature; nothing renders unless the user enables it.
# Patched to a local fork (see `[patch.crates-io]` below +
# `crates/ratatui-image/PATCHES.md`) for popup-safe Kitty rendering, reliable Sixel/iTerm2
# retransmission, and conservative Konsole protocol detection. Same public crate version.
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "tokio"] }
# Synced-lyrics fetch (lrclib) + raw browse. `native-tls` uses the OS TLS stack —
# Security.framework on macOS, SChannel on Windows — so there's no bundled C crypto
# (no aws-lc-sys/NASM): smaller binary, and Windows builds need no extra toolchain.
# Neither target uses OpenSSL, so the plan's "no system OpenSSL" intent still holds.
# `json` decodes responses. Shares ytmapi-rs's TLS stack (one provider, not two).
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json", "stream"] }
# YouTube Music metadata client. Same native (system) TLS as above — dropping the
# `rustls` feature is what removes aws-lc-sys. `simplified-queries` gives ergonomic
# `search_songs`/`search_*` helpers.
ytmapi-rs = { version = "0.3.2", default-features = false, features = ["native-tls", "simplified-queries"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Spotify OAuth PKCE code challenge (SHA-256). RustCrypto, pure Rust.
sha2 = "0.10"
# Only the process APIs are used (reaping a leaked mpv, the Windows kill backstop — see
# `player::lifetime`), so drop the default disk/network/component/user feature groups: it
# trims a slice of unused code on every platform (and the `objc2-open-directory` crate on
# macOS) with zero behaviour change.
sysinfo = { version = "0.39.5", default-features = false, features = ["system"] }
tao = { version = "0.34", optional = true }
# Optional player eye-candy (the Animations settings tab). A ratatui-native spinner used
# for the "now playing" throbber; nothing renders unless the user enables it. Permissive
# (Zlib) and pinned to ratatui 0.30, so it shares our ratatui copy — no second tree.
throbber-widgets-tui = "0.11"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "net", "time", "signal"] }
tracing = "0.1.44"
tray-icon = { version = "0.24.1", optional = true }
# ts-rs generates the TypeScript protocol types the GUI is typed against, honoring the
# serde attributes the wire already relies on (rename_all, internally-tagged enums).
# Optional + gated behind `ts-export`: build/test-time only, never in a release binary.
# The wire tests cover `skip_serializing_if`, which ts-rs ignores; suppress only those diagnostics.
ts-rs = { version = "10", optional = true, features = ["no-serde-warnings"] }
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# The transport strip lays out wide media glyphs (⏮ ⏯ ⏭) and registers click rects by
# hand, so it needs the same cell-width ratatui uses — `chars().count()` is wrong for
# those. Already in the tree via ratatui, so this pins no extra copy.
unicode-width = "0.2"
# NFKC normalization for Spotify↔YTM track matching (fullwidth ASCII, compat forms —
# endemic in K-pop/J-pop metadata). Pure Rust, shared unicode tables philosophy as above.
unicode-normalization = "0.1"
wry = { version = "0.55.1", default-features = false, features = ["os-webview", "protocol"], optional = true }

[build-dependencies]
embed-resource = "3.0.9"

# `kill_mpv_now` sends SIGKILL straight from the panic hook / signal handler; one
# async-signal-safe syscall, no allocation. Unix only — Windows uses the Job Object
# (M9) plus a sysinfo backstop instead.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# No-orphan on Windows: a Job Object with KILL_ON_JOB_CLOSE so the kernel terminates
# mpv when our process dies for ANY reason (close button, logoff, Task-Manager kill) —
# the hard kills signal handlers can't catch. Plus SetConsoleCtrlHandler for prompt
# teardown. Version 0.61 is already in the tree (via tokio/sysinfo), so no extra copy.
#
# `windows` (WinRT) powers the SMTC media session (`src/media/smtc.rs`): the Media/
# Storage_Streams/Foundation trio is the session + thumbnail surface, Win32_System_WinRT
# is `GetForWindow` interop + RoInitialize, and the UI/Gdi/LibraryLoader features are
# just the hidden top-level window SMTC requires (WNDCLASSW lives behind Graphics_Gdi).
# The Shell/Com quartet (Win32_UI_Shell{,_PropertiesSystem}, Win32_System_Com{,_StructuredStorage})
# plus Win32_System_Variant is classic COM for the AUMID-stamped Start-Menu shortcut the media
# flyout resolves our name+icon from (`src/media/identity.rs::write_start_menu_shortcut` —
# IShellLinkW + IPropertyStore(PKEY_AppUserModel_ID as PROPVARIANT) + IPersistFile).
# Registry-only registration was proven insufficient on Win11 26200
# (docs/windows-smtc-qa-results-2026-07-04.md).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", default-features = false, features = ["Media", "Storage_Streams", "Foundation", "Win32_Foundation", "Win32_System_WinRT", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant"] }
windows-sys = { version = "0.61", features = [
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }

# GSMTC *consumer* side, for `examples/smtc-probe.rs` only (the Windows SMTC QA
# harness reads back the session ytt publishes and drives it like Phone Link
# would — docs/windows-smtc-completion-plan.md §5.1). Dev-deps don't participate
# in `cargo build --bin`, so `Media_Control` never bloats the shipped binaries;
# cargo unifies these with the [dependencies] features only for examples/tests.
[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.62", default-features = false, features = [
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
] }

# macOS Now Playing media session (`src/media/macos.rs`): pure-Rust ObjC bindings —
# no C shims, no build scripts — so the clean cross-build story holds. `objc2-media-player`
# is MPNowPlayingInfoCenter/MPRemoteCommandCenter, `objc2-app-kit` only supplies the
# NSImage the artwork wrapper needs, `objc2-core-foundation` the CFRunLoop pump that
# delivers remote-command callbacks in a TUI (no NSApplication run loop), and `block2`
# the handler blocks. Unused classes cost binary size ~nothing (LTO strips; msg_send is lazy).
[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-core-foundation = "0.3"
objc2-foundation = "0.3"
objc2-media-player = "0.3"
# Enable wry's `transparent` feature on macOS only. It gates the WKWebView
# `drawsBackground = NO` path; without it `with_transparent(true)` is a silent no-op and
# the mini-player webview paints an opaque base backdrop (the visible rectangle/halo).
# Unifies with the base `wry` dep (features are additive); other targets are unaffected.
wry = { version = "0.55.1", default-features = false, features = ["transparent"], optional = true }

# Linux MPRIS media session (`src/media/mpris.rs`): the maintained zbus-based server-side
# implementation of org.mpris.MediaPlayer2 (pure Rust; playerctl/GNOME/KDE widgets all
# speak it). The `tokio` feature rides our existing runtime instead of zbus's async-io.
[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = { version = "0.10", features = ["tokio"] }

# Local fork of ratatui-image 11.0.6 with the rendering and terminal-detection patches documented
# in `crates/ratatui-image/PATCHES.md`. A vendored path patch — not a git/crates.io fork — so the
# source travels with the repo and `cargo install --path .` / the CI build need nothing extra.
# Re-apply the patches on any bump (grep the fork for `yututui patch`).
[patch.crates-io]
ratatui-image = { path = "crates/ratatui-image" }

[profile.release]
opt-level = "s"      # optimise for size; revisit "z"/3 after benchmarking
lto = "fat"          # cross-crate dead-code stripping
codegen-units = 1    # best inlining (required for fat LTO)
panic = "abort"      # drop unwinding tables (~100 KB); panic hook still restores TTY
strip = "symbols"    # strip debug symbols from the shipped binary
